# docwatch

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docwatch.py  pyproject.toml  setup.py
examples/: docwatch.conf  lit.bib  md.md  template.yml
src/docwatch/: conf.py  converters.py  main.py  subproc.py
